tests/golden/reject/shim_sqrt_arity_low_reject.goo
// P4.1: shim signature checking — math.Sqrt(float64) rejects zero args.
package main

import "math"

func main() {
	math.Sqrt()
}
